--- a/source/catalog.html
+++ b/source/catalog.html
@@ -51,7 +51,7 @@
         <ul class="catalog__list">
           <li class="catalog__item card">
             <div class="card__content-wrapper">
-              <div class="card__image-wrapper">
+              <div class="card__image-wrapper card__image-wrapper--small-chicken">
                 <picture>
                   <source media="(min-width: 1440px)" srcset="img/catalog-card-small-chicken-desktop.png" width="161" height="172">
                   <source media="(min-width: 768px)" srcset="img/catalog-card-small-chicken-tablet.png" width="161" height="172">
@@ -62,13 +62,13 @@
               <div class="card__info-wrapper">
                 <h2 class="card__title">Cat Energy PRO 500 г</h2>
                 <p class="card__description">Масса
-                  <span class="card__value">500 г</span>
+                  <span class="card__value card__value--weight">500 г</span>
                 </p>
                 <p class="card__description">Вкус
-                  <span class="card__value">Курица</span>
+                  <span class="card__value card__value--taste">Курица</span>
                 </p>
                 <p class="card__description">Цена
-                  <span class="card__value">700 Р.</span>
+                  <span class="card__value card__value--price">700 Р.</span>
                 </p>
               </div>
             </div>
@@ -77,7 +77,7 @@
 
           <li class="catalog__item card">
             <div class="card__content-wrapper">
-              <div class="card__image-wrapper">
+              <div class="card__image-wrapper card__image-wrapper--big">
                 <picture>
                   <source media="(min-width: 1440px)" srcset="img/catalog-card-big-chicken-desktop.png" width="172" height="202">
                   <source media="(min-width: 768px)" srcset="img/catalog-card-big-chicken-tablet.png" width="168" height="206">
@@ -88,13 +88,13 @@
               <div class="card__info-wrapper">
                 <h2 class="card__title">Cat Energy PRO 1000 г</h2>
                 <p class="card__description">Масса
-                  <span class="card__value">1000 г</span>
+                  <span class="card__value card__value--weight">1000 г</span>
                 </p>
                 <p class="card__description">Вкус
-                  <span class="card__value">Курица</span>
+                  <span class="card__value card__value--taste">Курица</span>
                 </p>
                 <p class="card__description">Цена
-                  <span class="card__value">1000 Р.</span>
+                  <span class="card__value card__value--price">1000 Р.</span>
                 </p>
               </div>
             </div>
@@ -103,7 +103,7 @@
 
           <li class="catalog__item card">
             <div class="card__content-wrapper">
-              <div class="card__image-wrapper">
+              <div class="card__image-wrapper card__image-wrapper--small-fish">
                 <picture>
                   <source media="(min-width: 768px)" srcset="img/catalog-card-small-fish-tablet.png" width="163" height="174">
                   <img class="card__image" src="img/catalog-card-small-fish.png" width="68" height="78"
@@ -113,13 +113,13 @@
               <div class="card__info-wrapper">
                 <h2 class="card__title">Cat Energy PRO 500 г</h2>
                 <p class="card__description">Масса
-                  <span class="card__value">500 г</span>
+                  <span class="card__value card__value--weight">500 г</span>
                 </p>
                 <p class="card__description">Вкус
-                  <span class="card__value">Рыба</span>
+                  <span class="card__value card__value--taste">Рыба</span>
                 </p>
                 <p class="card__description">Цена
-                  <span class="card__value">700 Р.</span>
+                  <span class="card__value card__value--price">700 Р.</span>
                 </p>
               </div>
             </div>
@@ -128,7 +128,7 @@
 
           <li class="catalog__item card">
             <div class="card__content-wrapper">
-              <div class="card__image-wrapper">
+              <div class="card__image-wrapper card__image-wrapper--big">
                 <picture>
                   <source media="(min-width: 1440px)" srcset="img/catalog-card-big-fish-desktop.png" width="172" height="196">
                   <source media="(min-width: 768px)" srcset="img/catalog-card-big-fish-tablet.png" width="168" height="200">
@@ -139,13 +139,13 @@
               <div class="card__info-wrapper">
                 <h2 class="card__title">Cat Energy PRO 1000 г</h2>
                 <p class="card__description">Масса
-                  <span class="card__value">1000 г</span>
+                  <span class="card__value card__value--weight">1000 г</span>
                 </p>
                 <p class="card__description">Вкус
-                  <span class="card__value">Рыба</span>
+                  <span class="card__value card__value--taste">Рыба</span>
                 </p>
                 <p class="card__description">Цена
-                  <span class="card__value">1000 Р.</span>
+                  <span class="card__value card__value--price">1000 Р.</span>
                 </p>
               </div>
             </div>
@@ -154,7 +154,7 @@
 
           <li class="catalog__item card">
             <div class="card__content-wrapper">
-              <div class="card__image-wrapper">
+              <div class="card__image-wrapper card__image-wrapper--small-buckwheat">
                 <picture>
                   <source media="(min-width: 768px)" srcset="img/catalog-card-small-buckwheat-tablet.png" width="161" height="171">
                 <img class="card__image" src="img/catalog-card-small-buckwheat.png" width="68" height="78"
@@ -164,13 +164,13 @@
               <div class="card__info-wrapper">
                 <h2 class="card__title">Cat Energy slim 500 г</h2>
                 <p class="card__description">Масса
-                  <span class="card__value">500 г</span>
+                  <span class="card__value card__value--weight">500 г</span>
                 </p>
                 <p class="card__description">Вкус
-                  <span class="card__value">Гречка</span>
+                  <span class="card__value card__value--taste">Гречка</span>
                 </p>
                 <p class="card__description">Цена
-                  <span class="card__value">400 Р.</span>
+                  <span class="card__value card__value--price">400 Р.</span>
                 </p>
               </div>
             </div>
@@ -179,7 +179,7 @@
 
           <li class="catalog__item card">
             <div class="card__content-wrapper">
-              <div class="card__image-wrapper">
+              <div class="card__image-wrapper card__image-wrapper--big">
                 <picture>
                   <source media="(min-width: 1440px)" srcset="img/catalog-card-big-buckwheat-desktop.png" width="172" height="196">
                   <source media="(min-width: 768px)" srcset="img/catalog-card-big-buckwheat-tablet.png" width="168" height="200">
@@ -190,13 +190,13 @@
               <div class="card__info-wrapper">
                 <h2 class="card__title">Cat Energy slim 1000 г</h2>
                 <p class="card__description">Масса
-                  <span class="card__value">1000 г</span>
+                  <span class="card__value card__value--weight">1000 г</span>
                 </p>
                 <p class="card__description">Вкус
-                  <span class="card__value">Гречка</span>
+                  <span class="card__value card__value--taste">Гречка</span>
                 </p>
                 <p class="card__description">Цена
-                  <span class="card__value">700 Р.</span>
+                  <span class="card__value card__value--price">700 Р.</span>
                 </p>
               </div>
             </div>
@@ -205,7 +205,7 @@
 
           <li class="catalog__item card">
             <div class="card__content-wrapper">
-              <div class="card__image-wrapper">
+              <div class="card__image-wrapper card__image-wrapper--small-rice">
                 <picture>
                   <source media="(min-width: 768px)" srcset="img/catalog-card-small-rice-tablet.png" width="163" height="174">
                 <img class="card__image" src="img/catalog-card-small-rice.png" width="72" height="84"
@@ -215,13 +215,13 @@
               <div class="card__info-wrapper">
                 <h2 class="card__title">Cat Energy slim 500 г</h2>
                 <p class="card__description">Масса
-                  <span class="card__value">500 г</span>
+                  <span class="card__value card__value--weight">500 г</span>
                 </p>
                 <p class="card__description">Вкус
-                  <span class="card__value">Рис</span>
+                  <span class="card__value card__value--taste">Рис</span>
                 </p>
                 <p class="card__description">Цена
-                  <span class="card__value">500 Р.</span>
+                  <span class="card__value card__value--price">500 Р.</span>
                 </p>
               </div>
             </div>
@@ -229,7 +229,7 @@
           </li>
 
           <li class="catalog__item card card-show-more">
-            <div class="card__info-wrapper">
+            <div class="card-show-more__info-wrapper">
               <img class="card-show-more__image" src="img/show-more.svg" width="30" height="30"
                 alt="Показать больше товаров">
               <h2 class="card-show-more__title">Показать еще 100500 товаров</h2>
@@ -258,7 +258,7 @@
 
             <li class="extra-goods__item extra-goods-item">
               <div class="extra-goods-item__content-wrapper">
-                <h3 class="extra-goods-item__title">Питьевая вода</h3>
+                <h3 class="extra-goods-item__title extra-goods-item__title--water">Питьевая вода</h3>
                 <p class="extra-goods-item__description">5 литров
                   <span class="extra-goods-item__value">50 Р.</span>
                 </p>
@@ -289,7 +289,7 @@
           <div class="special-offer">
             <img class="special-offer__image-gift" src="./img/special-offer.svg" width="78" height="80"
               alt="Логотип подарка">
-            <p class="special-offer__description">Закажите все и получите чехол для кота в подарок!</p>
+            <p class="special-offer__description">Закажите все <br> и получите чехол для кота в подарок!</p>
           </div>
         </div>
       </div>
