--- a/source/catalog.html
+++ b/source/catalog.html
@@ -60,7 +60,7 @@
                 </picture>
               </div>
               <div class="card__info-wrapper">
-                <h2 class="card__title">Cat Energy PRO 500 г</h2>
+                <h2 class="card__title">Cat Energy PRO <span class="card__title-weight">500 г</span></h2>
                 <p class="card__description">Масса
                   <span class="card__value card__value--weight">500 г</span>
                 </p>
@@ -77,7 +77,7 @@
 
           <li class="catalog__item card">
             <div class="card__content-wrapper">
-              <div class="card__image-wrapper card__image-wrapper--big">
+              <div class="card__image-wrapper card__image-wrapper--big card__image-wrapper--big-chicken">
                 <picture>
                   <source media="(min-width: 1440px)" srcset="img/catalog-card-big-chicken-desktop.png" width="172" height="202">
                   <source media="(min-width: 768px)" srcset="img/catalog-card-big-chicken-tablet.png" width="168" height="206">
@@ -86,7 +86,7 @@
                 </picture>
               </div>
               <div class="card__info-wrapper">
-                <h2 class="card__title">Cat Energy PRO 1000 г</h2>
+                <h2 class="card__title">Cat Energy PRO <span class="card__title-weight">1000 г</span> </h2>
                 <p class="card__description">Масса
                   <span class="card__value card__value--weight">1000 г</span>
                 </p>
@@ -111,7 +111,7 @@
                 </picture>
               </div>
               <div class="card__info-wrapper">
-                <h2 class="card__title">Cat Energy PRO 500 г</h2>
+                <h2 class="card__title">Cat Energy PRO <span class="card__title-weight">500 г</span> </h2>
                 <p class="card__description">Масса
                   <span class="card__value card__value--weight">500 г</span>
                 </p>
@@ -137,7 +137,7 @@
                 </picture>
               </div>
               <div class="card__info-wrapper">
-                <h2 class="card__title">Cat Energy PRO 1000 г</h2>
+                <h2 class="card__title">Cat Energy PRO <span class="card__title-weight">1000 г</span> </h2>
                 <p class="card__description">Масса
                   <span class="card__value card__value--weight">1000 г</span>
                 </p>
@@ -162,7 +162,7 @@
                 </picture>
               </div>
               <div class="card__info-wrapper">
-                <h2 class="card__title">Cat Energy slim 500 г</h2>
+                <h2 class="card__title">Cat Energy slim <span class="card__title-weight">500 г</span> </h2>
                 <p class="card__description">Масса
                   <span class="card__value card__value--weight">500 г</span>
                 </p>
@@ -188,7 +188,7 @@
                 </picture>
               </div>
               <div class="card__info-wrapper">
-                <h2 class="card__title">Cat Energy slim 1000 г</h2>
+                <h2 class="card__title">Cat Energy slim <span class="card__title-weight">1000 г</span> </h2>
                 <p class="card__description">Масса
                   <span class="card__value card__value--weight">1000 г</span>
                 </p>
@@ -208,12 +208,12 @@
               <div class="card__image-wrapper card__image-wrapper--small-rice">
                 <picture>
                   <source media="(min-width: 768px)" srcset="img/catalog-card-small-rice-tablet.png" width="163" height="174">
-                <img class="card__image" src="img/catalog-card-small-rice.png" width="72" height="84"
-                  alt="Кошачья еда со вкусом риса, 500 грамм">
+                  <img class="card__image" src="img/catalog-card-small-rice.png" width="72" height="84"
+                    alt="Кошачья еда со вкусом риса, 500 грамм">
                 </picture>
               </div>
               <div class="card__info-wrapper">
-                <h2 class="card__title">Cat Energy slim 500 г</h2>
+                <h2 class="card__title">Cat Energy slim <span class="card__title-weight">500 г</span> </h2>
                 <p class="card__description">Масса
                   <span class="card__value card__value--weight">500 г</span>
                 </p>
@@ -228,14 +228,21 @@
             <button class="card__button button" type="button">Заказать</button>
           </li>
 
-          <li class="catalog__item card card-show-more">
-            <div class="card-show-more__info-wrapper">
-              <img class="card-show-more__image" src="img/show-more.svg" width="30" height="30"
-                alt="Показать больше товаров">
-              <h2 class="card-show-more__title">Показать еще 100500 товаров</h2>
-              <p class="card-show-more__description">На самом деле вкусов гораздо больше!</p>
+          <li class="catalog__item card card--show-more">
+            <div class="card__content-wrapper card__content-wrapper--show-more">
+              <div class="card__image-wrapper card__image-wrapper--show-more">
+                <picture>
+                  <source media="(min-width: 768px)" srcset="img/show-more-tablet.svg" width="60" height="60">
+                  <img class="card__image" src="img/show-more.svg" width="30" height="30"
+                  alt="Показать больше товаров">
+                </picture>
+              </div>
+              <div class="card__info-wrapper card__info-wrapper--show-more">
+                <h2 class="card__title card__title--show-more">Показать еще 100500 товаров</h2>
+                <p class="card__description card__description--show-more">На самом деле вкусов гораздо больше!</p>
+              </div>
             </div>
-            <button class="card-show-more__button button button--gray" type="button">показать все</button>
+            <button class="card__button button button--show-more" type="button">показать все</button>
           </li>
         </ul>
       </div>
@@ -250,45 +257,49 @@
               <div class="extra-goods-item__content-wrapper">
                 <h3 class="extra-goods-item__title">Сахарозаменитель</h3>
                 <p class="extra-goods-item__description">1 упаковка (100 г)
-                  <span class="extra-goods-item__value">200 Р.</span>
+                  <span class="extra-goods-item__value extra-goods-item__value--sweetener-price">200 Р.</span>
                 </p>
               </div>
-              <button class="extra-goods-item__button button" type="button">Заказать</button>
+              <button class="extra-goods-item__button button button--extra-goods" type="button">Заказать</button>
             </li>
 
             <li class="extra-goods__item extra-goods-item">
               <div class="extra-goods-item__content-wrapper">
                 <h3 class="extra-goods-item__title extra-goods-item__title--water">Питьевая вода</h3>
                 <p class="extra-goods-item__description">5 литров
-                  <span class="extra-goods-item__value">50 Р.</span>
+                  <span class="extra-goods-item__value extra-goods-item__value--water-price">50 Р.</span>
                 </p>
               </div>
-              <button class="extra-goods-item__button button" type="button">Заказать</button>
+              <button class="extra-goods-item__button button button--extra-goods" type="button">Заказать</button>
             </li>
 
             <li class="extra-goods__item extra-goods-item">
               <div class="extra-goods-item__content-wrapper">
                 <h3 class="extra-goods-item__title">Молоко</h3>
                 <p class="extra-goods-item__description">1 литр
-                  <span class="extra-goods-item__value">100 Р.</span>
+                  <span class="extra-goods-item__value extra-goods-item__value--milk-price">100 Р.</span>
                 </p>
               </div>
-              <button class="extra-goods-item__button button" type="button">Заказать</button>
+              <button class="extra-goods-item__button button button--extra-goods" type="button">Заказать</button>
             </li>
 
             <li class="extra-goods__item extra-goods-item">
               <div class="extra-goods-item__content-wrapper">
                 <h3 class="extra-goods-item__title">Витамины</h3>
                 <p class="extra-goods-item__description">1 упаковка (30 г)
-                  <span class="extra-goods-item__value">300 Р.</span>
+                  <span class="extra-goods-item__value extra-goods-item__value--vitamins-price">300 Р.</span>
                 </p>
               </div>
-              <button class="extra-goods-item__button button" type="button">Заказать</button>
+              <button class="extra-goods-item__button button button--extra-goods" type="button">Заказать</button>
             </li>
           </ul>
           <div class="special-offer">
-            <img class="special-offer__image-gift" src="./img/special-offer.svg" width="78" height="80"
+            <picture>
+              <source media="(min-width: 768px)" srcset="./img/special-offer-tablet.svg" width="80" height="82">
+              <img class="special-offer__image-gift" src="./img/special-offer.svg" width="78" height="80"
               alt="Логотип подарка">
+            </picture>
+
             <p class="special-offer__description">Закажите все <br> и получите чехол для кота в подарок!</p>
           </div>
         </div>
