--- a/source/index.html
+++ b/source/index.html
@@ -9,8 +9,8 @@
   <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicons/apple.png">
   <link rel="manifest" href="manifest.webmanifest">
-  <link rel="preload" href="fonts/oswaldregular.woff2" as="font">
-  <link rel="preload" href="fonts/oswaldmedium.woff2" as="font">
+  <link rel="preload" href="/fonts/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anomymous">
+  <link rel="preload" href="/fonts/oswaldmedium.woff2" type="font/woff2" as="font" crossorigin="anomymous">
   <title>Кэт энерджи</title>
 </head>
 
@@ -47,6 +47,7 @@
             <li class="site-list__item">
               <a class="site-list__link site-list__link--white" href="form.html">Подбор программы</a>
             </li>
+
           </ul>
         </div>
       </nav>
@@ -91,7 +92,7 @@
               Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy
               Slim поможет вашему питомцу сбросить лишний вес.
             </p>
-            <a class="programs__link programs__link--slim" href="#">каталог slim</a>
+            <a class="programs__link programs__link--slim programs__link--has-icon programs__link--icon_arrow" href="#">каталог slim</a>
           </li>
           <li class="programs__item programs__item--weight-gain">
             <h3 class="programs__title">Набор массы</h3>
@@ -99,7 +100,7 @@
               Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту
               нарастить необходимые мышцы!
             </p>
-            <a class="programs__link programs__link--pro" href="#">каталог pro</a>
+            <a class="programs__link programs__link--pro programs__link--has-icon programs__link--icon_arrow" href="#">каталог pro</a>
           </li>
         </ul>
       </div>
@@ -191,8 +192,8 @@
             <div class="example__range-scale-bar">
               <div class="example__range-scale-circle">
                 <button class="example__range-scale-button" type="button">
-                  <svg width="24" height="18" viewBox="0 0 24 18" fill="none">
-                    <use href="../img/sprite.svg#slider-button"/>
+                  <svg width="24" height="18" viewBox="0 0 24 18" fill="currentColor">
+                    <use href="img/sprite.svg#slider-button"/>
                   </svg>
                 </button>
               </div>
@@ -221,7 +222,7 @@
     <div class="main-footer__wrapper container-content">
       <a class="main-footer__link" href="index.html">
         <svg width="128" height="24" viewBox="0 0 128 24" fill="none">
-          <use href="../img/sprite.svg#site-logo-footer"/>
+          <use href="img/sprite.svg#site-logo-footer"/>
         </svg>
       </a>
       <ul class="main-footer__social-list social-list">
@@ -229,15 +230,15 @@
           <a class="social-list__link" href="">
             <span class="visually-hidden">Вконтакте</span>
             <svg width="27" height="17" viewBox="0 0 27 17">
-              <use href="./img/sprite.svg#vk"/>
+              <use href="img/sprite.svg#vk"/>
             </svg>
           </a>
         </li>
         <li class="social-list__item">
           <a class="social-list__link" href="">
             <span class="visually-hidden">Ютуб</span>
-            <svg width="24" height="19" viewBox="0 0 24 19" fill="none">
-              <use href="./img/sprite.svg#youtube"/>
+            <svg width="24" height="19" viewBox="0 0 24 19" >
+              <use href="img/sprite.svg#youtube"/>
             </svg>
           </a>
         </li>
@@ -245,7 +246,7 @@
           <a class="social-list__link" href="">
             <span class="visually-hidden">Телеграм</span>
             <svg width="20" height="18" viewBox="0 0 20 18" fill="none">
-              <use href="./img/sprite.svg#telegram"/>
+              <use href="img/sprite.svg#telegram"/>
             </svg>
           </a>
         </li>
@@ -254,7 +255,7 @@
         <b class="copyright__text">HTML Academy</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <svg width="27" height="34" viewBox="0 0 27 34" fill="none">
-            <use href="./img/sprite.svg#html-academy-logo"/>
+            <use href="img/sprite.svg#html-academy-logo"/>
           </svg>
         </a>
       </div>
