--- a/source/index.html
+++ b/source/index.html
@@ -221,7 +221,7 @@
   <footer class="main-footer">
     <div class="main-footer__wrapper container-content">
       <a class="main-footer__link" href="index.html">
-        <svg width="128" height="24" viewBox="0 0 128 24" fill="none">
+        <svg width="128" height="24">
           <use href="img/sprite.svg#site-logo-footer"/>
         </svg>
       </a>
@@ -229,15 +229,15 @@
         <li class="social-list__item">
           <a class="social-list__link" href="">
             <span class="visually-hidden">Вконтакте</span>
-            <svg width="27" height="17" viewBox="0 0 27 17">
-              <use href="img/sprite.svg#vk"/>
+            <svg width="27" height="17">
+              <use href="img/sprite.svg#vk"></use>
             </svg>
           </a>
         </li>
         <li class="social-list__item">
           <a class="social-list__link" href="">
             <span class="visually-hidden">Ютуб</span>
-            <svg width="24" height="19" viewBox="0 0 24 19" >
+            <svg width="24" height="19" >
               <use href="img/sprite.svg#youtube"/>
             </svg>
           </a>
@@ -245,8 +245,8 @@
         <li class="social-list__item">
           <a class="social-list__link" href="">
             <span class="visually-hidden">Телеграм</span>
-            <svg width="20" height="18" viewBox="0 0 20 18" fill="none">
-              <use href="img/sprite.svg#telegram"/>
+            <svg width="20" height="18">
+              <use href="img/sprite.svg#telegram"></use>
             </svg>
           </a>
         </li>
@@ -254,7 +254,7 @@
       <div class="main-footer__copyright copyright">
         <b class="copyright__text">HTML Academy</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <svg width="27" height="34" viewBox="0 0 27 34" fill="none">
+          <svg width="27" height="34">
             <use href="img/sprite.svg#html-academy-logo"/>
           </svg>
         </a>
