--- a/source/form.html
+++ b/source/form.html
@@ -9,8 +9,8 @@
   <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicons/apple.png">
   <link rel="manifest" href="manifest.webmanifest">
-  <link rel="preload" href="/fonts/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anomymous">
-  <link rel="preload" href="/fonts/oswaldmedium.woff2" type="font/woff2" as="font" crossorigin="anomymous">
+  <link rel="preload" href="/fonts/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/fonts/oswaldmedium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
   <title>Подбор программы</title>
 </head>
 
@@ -21,13 +21,9 @@
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg" width="202" height="59">
           <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="52">
-          <img class="main-header__logo-image" src="img/logo-mobile.svg" width="33" height="38"
+          <img class="main-header__logo-image" src="img/logo-mobile.svg" width="191" height="38"
             alt="Логотип Кэт энерджи">
         </picture>
-      </a>
-      <a class="main-header__logo-secondary">
-        <img class="main-header__logo-image" src="img/logo-mobile-secondary.svg" width="101" height="18"
-          alt="Кэт энерджи">
       </a>
       <nav class="main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button">
@@ -234,8 +230,8 @@
         </li>
       </ul>
       <div class="main-footer__copyright copyright">
-        <b class="copyright__text">HTML Academy</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <b class="copyright__text">HTML Academy</b>
           <svg width="27" height="34">
             <use href="img/sprite.svg#html-academy-logo"/>
           </svg>
