--- a/source/index.html
+++ b/source/index.html
@@ -9,8 +9,8 @@
   <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicons/apple.png">
   <link rel="manifest" href="manifest.webmanifest">
-  <link rel="preload" href="/fonts/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anomymous">
-  <link rel="preload" href="/fonts/oswaldmedium.woff2" type="font/woff2" as="font" crossorigin="anomymous">
+  <link rel="preload" href="/fonts/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/fonts/oswaldmedium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
   <title>Кэт энерджи</title>
 </head>
 
@@ -22,13 +22,9 @@
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg" width="202" height="59">
           <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="52">
-          <img class="main-header__logo-image" src="img/logo-mobile.svg" width="33" height="38"
+          <img class="main-header__logo-image" src="img/logo-mobile.svg" width="191" height="38"
             alt="Логотип Кэт энерджи">
         </picture>
-      </a>
-      <a class="main-header__logo-secondary" href="index.html">
-        <img class="main-header__logo-image" src="img/logo-mobile-secondary.svg" width="101" height="18"
-          alt="Кэт энерджи">
       </a>
       <nav class="main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button">
@@ -68,8 +64,7 @@
             srcset="img/index-can-desktop.webp 1x, img/index-can-desktop@2x.webp 2x" width="552" height="499">
           <source type="image/webp" media="(min-width: 768px)"
             srcset="img/index-can-tablet.webp 1x, img/index-can-tablet@2x.webp 2x" width="709" height="609">
-          <source type="image/webp" srcset="img/index-can-mobile.webp 1x, img/index-can-mobile@2x.webp 2x"
-            src="img/index-can-mobile.png" width="280" height="270">
+          <source type="image/webp" srcset="img/index-can-mobile.webp 1x, img/index-can-mobile@2x.webp 2x">
           <source media="(min-width: 1440px)" srcset="img/index-can-desktop.png 1x, img/index-can-desktop@2x.png 2x"
             width="552" height="499">
           <source media="(min-width: 768px)" srcset="img/index-can-tablet.png 1x, img/index-can-tablet@2x.png 2x"
@@ -221,6 +216,7 @@
   <footer class="main-footer">
     <div class="main-footer__wrapper container-content">
       <a class="main-footer__link" href="index.html">
+        <span class="visually-hidden">Логотип Кэт Энерджи</span>
         <svg width="128" height="24">
           <use href="img/sprite.svg#site-logo-footer"/>
         </svg>
@@ -252,8 +248,8 @@
         </li>
       </ul>
       <div class="main-footer__copyright copyright">
-        <b class="copyright__text">HTML Academy</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <b class="copyright__text">HTML Academy</b>
           <svg width="27" height="34">
             <use href="img/sprite.svg#html-academy-logo"/>
           </svg>
