добавил описание к логотипу в футере

--- a/source/index.html
+++ b/source/index.html
@@ -217,10 +217,7 @@
   <footer class="main-footer">
     <div class="main-footer__wrapper container-content">
       <a class="main-footer__link" href="index.html">
-        <span class="visually-hidden">Логотип Кэт Энерджи</span>
-        <svg width="128" height="24">
-          <use href="img/sprite.svg#site-logo-footer" />
-        </svg>
+        <img class="main-footer__logo" src="../img/site-logo-footer.svg" width="128" height="24" alt="Логотип Кэт Энерджи">
       </a>
       <ul class="main-footer__social-list social-list">
         <li class="social-list__item">
